src/styles.css
/* ... */
/*
  10. Create a root stacking context
*/
#root,
#__next {
  isolation: isolate;
}

@font-face {
  font-family: "oswald_regular";
  src:
    url("./fonts/oswald/oswald-regular-webfont.woff2") format("woff2"),
    url("./fonts/oswald/oswald-regular-webfont.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "oswald_demibold";
  src:
    url("./fonts/oswald/oswald-demibold-webfont.woff2") format("woff2"),
    url("./fonts/oswald/oswald-demibold-webfont.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

:root {
  --main-bg-color: rgb(255, 255, 255);

  --card-border-radius: 5px;
  --main-margin: 0 10%;
  --center-max-width: 960px;

  --color-linen: #ffede1;
  --color-ivory: #f9fbf2;
  --color-light-cyan: rgb(171, 226, 236);
  --color-jordy-blue: #afcbff;
  --color-oxford-blue: rgb(27, 28, 32);

  --default-font-size: 20px; /* 18-24px */
  --header-font-size: 55px; /* 35-50px */
  --secondary-text-font-size: 16px;

  --main-text-color: black;
  --header-text-color: white;
  --secondary-text-color: rgb(115, 115, 115);

  --font-bold: "oswald_demibold";
  --font-regular: "nimbus_regular";
}

html,
body {
  height: 100%;
  min-height: 100vh;
  /* font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
  font-size: var(--default-font-size);
}

body {
  overflow-y: auto;
  overflow-x: auto;
}

/* Reset button look */
button,
input[type="submit"],
input[type="reset"] {
  background: none;
  color: inherit;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  outline: inherit;
}

input[type="text"] {
  background: none;
  color: inherit;
  border: none;
  padding: 0;
  font: inherit;
  outline: inherit;
}

.root.container {
  height: 100%;
  width: 100%;
  min-width: 450px;
  position: relative;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 65px auto;
  font-family: var(--font-regular);
  font-size: var(--default-font-size);
}

.header {
  /* position: sticky; */
  top: 0;

  padding: 5px 10px;
  display: grid;
  grid-template-columns: minmax(100px, 960px);
  grid-template-rows: 1fr;
  justify-content: center;
  align-items: center;

  overflow: hidden;
  white-space: nowrap;

  background-color: var(--color-oxford-blue);
}

.header-items {
  color: white;

  max-width: 100%;

  display: grid;
  grid-template-columns: 1fr 1.3fr;
  grid-template-rows: 1fr;
  gap: 10px;
  justify-content: center;
  align-items: center;
}

.location-display {
  width: 100%;
  min-width: 0px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.location-search {
  justify-self: end;
  width: 100%;
}

/* Search bar and search button layout */
.location-search search form {
  display: flex;
  gap: 10px;
  flex-direction: row;
  justify-content: center;
  align-items: center;

  border-radius: var(--card-border-radius);
}

/* Search icon and input text */
.location-search search form p {
  display: flex;
  flex-direction: row;
  align-items: center;
  flex-wrap: nowrap;

  background-color: rgb(255, 255, 255);
  padding: 3px;
  border-radius: var(--card-border-radius);
  width: 80%;
  min-width: 50px;
}

.location-search search form label {
  transform: rotateX("30");
  color: rgb(124, 124, 124);
  padding: 0 2px;
}

.header-items .location-search #location {
  border-radius: 5px;
  padding-left: 2px;
  width: 100%;
  min-width: 70px;
  color: gray;
}

.header-items .location-search button {
  background-color: rgb(211, 211, 211);
  border-radius: 5px;
  color: rgb(59, 59, 59);
  padding: 3px 10px;
}

.header-items .location-display {
  font-family: var(--font-bold);
}

.intro-search {
  margin: 20px;
  justify-self: center;
  width: 80%;
  height: 40%;
  background-color: #ffffff;
  border-radius: 5px;

  display: flex;
  justify-content: center;
  align-items: center;
}
/* Contains all main section */
.main-container {
  padding: 0 20px;
  width: 100%;
  min-width: 100px;
  background-color: var(--color-light-cyan);
  display: grid;
  grid-template-columns: minmax(100px, 1160px);
  grid-template-rows: 1fr;
  justify-content: center;
  align-items: start;
}

/* Contains all cards*/
.weather-cards {
  width: 100%;
  margin: 20px 0;

  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
  gap: 1rem;
}

.left-cards,
.right-cards {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

/* Apply to all cards */
.card {
  font-family: var(--font-regular);
  max-width: 100%;
  width: 100%;
  min-width: fit-content;
  background-color: white;
  border-radius: var(--card-border-radius);
  box-shadow: 0px 2px 6px 1px rgb(92, 150, 162);
}

.card .subheader {
  padding: 18px 25px 2px;
  font-size: var(--secondary-text-font-size);
  font-family: var(--font-regular);
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  gap: 8px;
}

.card .subheader span:first-child {
  color: var(--secondary-text-color);
}

.card hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 2px solid #e7e7e7;
  margin: 0.2em 0;
  padding: 0;
}

.card .card-body {
  padding: 10px 25px 18px;
}

.card .icon {
  flex-shrink: 0;
}

/* Applies to the Today's Weather card */

.card.today {
  /* width: 500px; */
}

.card.today .icon {
  width: 30px;
  height: 30px;
  background-color: aquamarine;
  border-radius: 50%;
}

.card.today .temp.lo .icon {
  background-color: rgb(127, 221, 255);
}

.card.today .temp.hi .icon {
  background-color: rgb(255, 150, 57);
}

.card.today .temp {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  gap: 10px;
}

.card.today .description {
  padding-top: 10px;
}

.card.today .lo-hi-temps {
  display: flex;
  justify-content: space-between;
  font-family: var(--font-bold);
}

/* Applies to the Current Weather card */

.card.current-weather {
  /* width: 500px; */
}
/* ... */

